--- a/barbearia/index.html
+++ b/barbearia/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estou programando no Senac</title>
+    <link rel="stylesheet" type ="text/css" href="css/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <p>Minha primeira página HTML</p>
+    <header class="class"></header>
+    <main class="class"></main>
+    <footer class="class"></footer>
 </body>
-</html>''
+</html>
