--- a/vanessa/index.html
+++ b/vanessa/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="lana.css">
     <title>Dhébora Christine</title>
 </head>
 <body>
     <h1> *.Hope is a dangerous thing for a woman like me to have - Lana Del Rey.* </h1>
+    <h3>°.*#Norman Fucking Rockwell - 'Cause you're just a man, It's just what you do#°.:!</h3>
+    <h3>°.*#Radio - Now my life is sweet like cinnamon, Like a fuckin' dream I'm livin in#°.:!</h3>
+    <h3>°.*#Video Games - Only worth living if somebody is loving you, And, baby, now, you do#°.:!</h3>
+    <h3>°.*#Norman Fucking Rockwell - 'Cause you're just a man, It's just what you do#°.:!</h3>
 </body>
 </html>
