--- a/barbearia/index.html
+++ b/barbearia/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type ="text/css" href="css/style.css">
-    <title>Document</title>
+    <title>Senac Barbs</title>
 </head>
 <body>
-    <header class="class"></header>
-    <main class="class"></main>
-    <footer class="class"></footer>
+    <header id="cabecalho" class="cabecalho_home">
+        <img src="imagens/logobarb.png" alt="Logo da Barbearia" id="logo" class="imagem_cabecalho_home">
+        <h1 class="titulo_cabecalho_home">Barbearia Senac</h1>
+    </header>
+    <main class="conteudo_home" >
+        <p>estou na main</p>
+    </main>
+    <footer class="rodape_home"></footer>
 </body>
 </html>
